[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scripts/MainMenu/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Assets/GdBg3.png" type="Texture" id=3]
[ext_resource path="res://Assets/MainMenu3.png" type="Texture" id=4]
[ext_resource path="res://Fonts/kenvector_future.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/GUI/Buttons/New Game/NG_normal.png" type="Texture" id=6]
[ext_resource path="res://Assets/GUI/Buttons/New Game/NG_clicked.png" type="Texture" id=7]
[ext_resource path="res://Assets/GUI/Buttons/New Game/NS_hover.png" type="Texture" id=8]
[ext_resource path="res://Assets/GUI/Buttons/Tutorial/TUT_normal.png" type="Texture" id=9]
[ext_resource path="res://Assets/GUI/Buttons/Tutorial/TUT_clicked.png" type="Texture" id=10]
[ext_resource path="res://Assets/GUI/Buttons/Tutorial/TUT_hover.png" type="Texture" id=11]
[ext_resource path="res://Assets/GUI/Buttons/Quit/QUIT_normal.png" type="Texture" id=12]
[ext_resource path="res://Assets/GUI/Buttons/Quit/QUIT_clicked.png" type="Texture" id=13]
[ext_resource path="res://Assets/GUI/Buttons/Quit/QUIT_hover.png" type="Texture" id=14]
[ext_resource path="res://Scripts/FadeIn/FadeIn.gd" type="Script" id=15]
[ext_resource path="res://Scenes/MainMenuMusic.tscn" type="PackedScene" id=16]
[ext_resource path="res://Music/Button_Select3.wav" type="AudioStream" id=17]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=2]

resource_name = "FadeIn"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Control" type="Node2D"]

script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="." index="0"]

position = Vector2( 602.289, 301.648 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 2 )

[node name="Sprite" type="NinePatchRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1148.0
margin_bottom = 543.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.5
margin_top = -282.5
margin_right = 228.5
margin_bottom = 282.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )

[node name="HighScore" type="Label" parent="NinePatchRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 151.0
margin_top = 250.0
margin_right = 304.0
margin_bottom = 303.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "6537"
align = 1
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 134.0
margin_top = 317.0
margin_right = 321.0
margin_bottom = 505.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 5
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="NewGame" type="TextureButton" parent="NinePatchRect/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 187.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="Tutorial" type="TextureButton" parent="NinePatchRect/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 187.0
margin_bottom = 123.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
expand = true
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="Quit" type="TextureButton" parent="NinePatchRect/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 128.0
margin_right = 187.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )
expand = true

[node name="FadeIn" type="ColorRect" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1148.0
margin_bottom = 552.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
script = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/FadeIn = SubResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="MainMenuMusic" parent="." index="4" instance=ExtResource( 16 )]

[node name="ButtonSelect" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 17 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="pressed" from="NinePatchRect/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]

[connection signal="pressed" from="NinePatchRect/VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]

[connection signal="pressed" from="NinePatchRect/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]

[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]

[connection signal="animation_finished" from="FadeIn/AnimationPlayer" to="FadeIn" method="_on_AnimationPlayer_animation_finished"]

[connection signal="tree_exiting" from="MainMenuMusic" to="." method="_on_MainMenuMusic_tree_exiting"]


